crates/strider/tests/snapshots/v2__ppc32be__builtins__expect_branch.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="φ r9", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "16" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v17" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v17" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "19" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "22" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "24" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "27" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "29" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "33" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "37" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="BitNot\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0xffffff9b:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "50" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "54" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "55" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "56" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "58" -> "56" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "38" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
