crates/strider/tests/snapshots/v2__ppc32be__builtins__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100004bc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0xdead0000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x100004fc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v12" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "13" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "8" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x10000528:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v19" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v19" [color="#888888", style=dashed];
  "v19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v21" [color="#888888", style=dashed];
  "v21" -> "15" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "22" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x10000560:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "22" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xcafebabe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "22" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v28" [color="#888888", style=dashed];
  "v28" -> "22" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "29" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "22" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x100005a8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" -> "29" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "29" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v35" [color="#888888", style=dashed];
  "v35" -> "29" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "36" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "29" -> "36" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x100005f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" -> "36" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x32:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v40" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v40" [color="#888888", style=dashed];
  "v40" -> "36" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "41" -> "36" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v42" [color="#888888", style=dashed];
  "v42" -> "36" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "43" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "36" -> "43" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v46" [color="#888888", style=dashed];
  "v46" -> "43" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v47" [color="#888888", style=dashed];
  "v47" -> "43" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v48" [color="#888888", style=dashed];
  "v48" -> "43" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "45" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v49" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v49" [color="#888888", style=dashed];
  "v49" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "36" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "51" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "44" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "36" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "29" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "55" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "37" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "29" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "22" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "22" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "59" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "15" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "61" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "8" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "63" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "9" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "9" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[7] ← r10", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "65" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "68" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "70" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "68" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "71" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "68" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "71" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "74" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "71" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "52" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "74" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
